# project-project-group22

./: .buildinfo  Makefile  README.md  Untitled.ipynb  _toc.yml  analysis.ipynb  analysis_emma.ipynb  combined_analysis.html  combined_analysis.ipynb  environment.yml  genindex.html  main.ipynb  objects.inv  reuels_analysis.ipynb  searchindex.js
.doctrees/: README.doctree  environment.pickle  main.doctree
_build/.doctrees/: combined_analysis.doctree  project-description.doctree
_build/.doctrees/finalbook/: notebooks.doctree
_build/.doctrees/finalbook/_build/jupyter_execute/: notebooks.doctree
_build/html/: README.html  main.html  project-description.html  search.html
_build/html/.doctrees/: combined_analysis.doctree
_build/html/.doctrees/finalbook/: notebooks.doctree
_build/html/finalbook/_build/jupyter_execute/: notebooks.html
_build/jupyter_execute/: combined_analysis.ipynb
_build/jupyter_execute/finalbook/: notebooks.ipynb
_build/jupyter_execute/finalbook/_build/jupyter_execute/: notebooks.ipynb
_sources/: combined_analysis.ipynb
clean_data/: ashp_meter.csv  wifi.csv
finalbook/: notebooks.html
tools/: LICENSE  __init__.py  setup.cfg  timeseries.py
tools/tests/: test_tools.py
